<resources>
    <string name="app_name" translatable="false">Booklet</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_principal" translatable="false">PrincipalActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="iniciarSessao">Iniciar sessão</string>
    <string name="entrar">Entrar</string>
    <string name="registo">Não tens conta? Faz o registo</string>
    <string name="registoText">Registro</string>
    <string name="novoUtilizador">Novo utilizador</string>
    <string name="nome">Nome</string>
    <string name="confirmarPass">Confirmar password</string>
    <string name="registar">Registar</string>
    <string name="ajuda">Ajuda</string>
    <string name="procurar">Procurar</string>
    <string name="noticias">Notícias</string>
    <string name="novaTarefa">Nova Tarefa</string>
    <string name="tarefas">Tarefas</string>
    <string name="tarefa">Tarefa</string>
    <string name="tarefaIN">Tarefa:</string>
    <string name="disciplina">Disciplina</string>
    <string name="disciplinaIN">Disciplina:</string>
    <string name="data">Data:</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="atualizarTarefa">Atualizar Tarefa</string>
    <string name="atualizar">Atualizar</string>
    <string name="tarefaRealizada">Tarefa realizada</string>
    <string name="tarefaNaoRealizada">Tarefa por fazer</string>
    <string name="realizada">Realizada</string>
    <string name="nRealizada">Não realizada</string>
    <string name="horario">Horário</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="adicionarNovaDisciplina">Adicionar nova disciplina</string>
    <string name="salaIN">Sala:</string>
    <string name="sala">Sala</string>
    <string name="horas">Horas:</string>
    <string name="atualizarHorario">Atualizar horário</string>
    <string name="selecionarDia">Seleciona o dia da semana</string>
    <string name="horaInicial">Hora Inicial</string>
    <string name="horaFinal">Hora Final</string>
    <string name="perfil">Perfil</string>
    <string name="dadosPerfil">Dados do perfil</string>
    <string name="nomeUtilizdor">Nome de utilizador</string>
    <string name="mudarPass">Mudar password</string>
    <string name="terminarSessão">Terminar sessão</string>
    <string name="alterarPass">Alterar password</string>
    <string name="passAtual">Password atual</string>
    <string name="passNova">Nova password</string>
    <string name="repetirPassNova">Repetir nova password</string>
    <string name="alterar">Alterar</string>
    <string name="sessaoTerminar">A sua sessão vai terminar</string>
    <string name="fechar">Fechar</string>
    <string name="terminar">Terminar</string>
    <string name="desejaTerminar">Deseja terminar sessão?</string>
    <string name="email">Email</string>
    <string name="semLigacao">Sem ligação à internet</string>
    <string name="tentarNovamente">Tentar novamente</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelado">Cancelado</string>
    <string name="excluirAula">Excluir aula</string>
    <string name="certezaExcluirAula">Tem a certeza que deseja excluir a aula?</string>
    <string name="excluirTarefa">Excluir tarefa</string>
    <string name="certezaExcluirTarefa">Tem a certeza que deseja excluir a tarefa?</string>
    <string name="tituloAjuda">Selecione o tipo de ajuda</string>
    <string name="entrarNaConta">Entrar na conta</string>
    <string name="registarConta">Registar conta</string>
    <string name="paginaNoticias">Página de notícias</string>
    <string name="paginaTarefas">Página de tarefas</string>
    <string name="paginaHorario">Página de horário</string>
    <string name="paginaPerfil">Página de perfil</string>
    <string name="contactos">Contactos</string>
    <string name="descricaoAjudaLogin">Esta página serve para os utilizadores entrarem nas suas contas. Para entrar tem que se inserir as credenciais (email e senha). As credenciais são inseridas nas caixas de texto e para entrar na conta, basta clicar no botão "Entrar".</string>
    <string name="descricaoAjudaRegisto">Para registar uma nova conta, o utilizador tem de clicar no texto sublinhado, como é demonstrado na imagem. Ao clicar no texto o utilizador é redirecionado para a página de registo. Quando o utilizador se encontrar na página de registo terá que inserir o seu nome, email, a sua palavra-passe e a confirmação da mesma. A palavra-passe terá de ter no mínimo 6 caracteres. </string>
    <string name="descricaoAjudaNoticia">Nesta página o utilizador irá ter uma caixa de pesquisa para procurar por uma notícia em específico. As notícias são listadas com a sua respetiva imagem, título, fonte e à quantas horas foi publicada. Se o utilizador quiser ler uma notícia basta clicar e irá aparecer o website, como é demonstrado na segunda imagem. Ao pressionar a notícia durante algum tempo o link do website é automaticamente copiado para a área de transferência.</string>
    <string name="criarTarefa">Criar tarefa</string>
    <string name="editarTarefa">Editar tarefa</string>
    <string name="realizarTarefa">Realizar tarefa</string>
    <string name="eliminarTarefa">Eliminar tarefa</string>
    <string name="descricaoAjudaTarefaPrincipal">Nesta página o utilizador irá criar as suas tarefas, inserindo a disciplina, a tarefa e a data de entrega. Ao criar as tarefas serão automaticamente listadas, o utilizador conseguirá editar, eliminar e meter se a tarefa já foi realizada. Se precisar de ajuda na criação, edição ou eliminação da tarefa, deslize para baixo.</string>
    <string name="descricaoAjudaTarefaCriar">Para criar uma nova tarefa, basta clicar no botão redondo que se encontra no canto inferior direito. De seguida irá aparecer uma <i>pop-up</i>, depois é só inserir todos os campos (disciplina, tarefa e data), a data é preenchida automaticamente com o dia atual. Se quiser alterar a data, pode alterar manualmente ou então clique no botão com um <i>icon</i> de calendário e irá aparecer um calendário para selecionar o dia, mês e ano. Se o utilizador quiser definir um lembrete terá que clicar no <i>icon</i> do sino, depois irá aparecer duas <i>pop-ups</i> uma para selecionar o dia e outro para selecionar a hora. Por fim basta guardar e a tarefa irá aparecer listada.</string>
    <string name="descricaoAjudaTarefaEditar">Para editar uma tarefa, basta clicar na tarefa e logo de seguida irá aparecer um <i>pop-up</i> com os dados da tarefa selecionada. Depois é só alterar os campos que deseja e guardar. Se o utilizador quiser definir um lembrete, terá que clicar no <i>icon</i> do sino e irá aparecer duas <i>pop-ups</i> uma para selecionar o dia e outra para selecionar a hora.</string>
    <string name="descricaoAjudaTarefaEliminar">Para eliminar uma tarefa, basta arrastar a tarefa que pretende eliminar para a direita ou para a esquerda, logo de seguida irá aparecer um <i>pop-up</i> de confirmação. Ao confirmar a tarefa será excluída.</string>
    <string name="descricaoAjudaTarefaRealizar">Para meter uma tarefa já realizada, basta manter pressionado durante algum tempo a tarefa e a <i>checkbox</i> é automaticamente ativada. Se o utilizador quiser alterar a tarefa para não realizada, é só fazer o mesmo.</string>
    <string name="descricaoAjudaHorarioPrincipal">Nesta página o utilizador terá que selecionar o dia da semana, depois irá ser redirecionado para a página desse dia e só depois conseguirá adicionar uma disciplina, sala e horas (de início e fim). O utilizador poderá criar, atualizar e eliminar as aulas.</string>
    <string name="criarAula">Criar nova aula</string>
    <string name="EditarAula">Editar aula</string>
    <string name="EliminarAula">Eliminar aula</string>
    <string name="descricaoAjudaHorarioCriar">Para criar uma nova aula, basta clicar no botão redondo que se encontra no canto inferior direito. De seguida irá aparecer uma <i>pop-up</i>, depois é so preencher a disciplina e sala, para inserir as horas, o utilizador tem que clicar nos botões das horas e irá aparecer uma <i>pop-up</i> para selecionar a hora. De seguida é só guardar e a aula será listada.</string>
    <string name="descricaoAjudaHorarioEditar">Para editar a aula, é só clicar na aula que se pretende editar. De seguida irá aparecer uma <i>pop-up</i> com os dados da aula. Depois é só alterar os dados que se pretende alterar e guardar.</string>
    <string name="descricaoAjudaHorarioEliminar">Para eliminar uma aula, basta arrastar a aula que pretende eliminar para a direita ou para a esquerda, logo de seguida irá aparecer um <i>pop-up</i> de confirmação. Ao confirmar a tarefa será excluída.</string>
    <string name="descricaoAjudaPerfilPrincipal">Nesta página o utilizador conseguirá ver o seu nome de utilizador e o seu email. Também conseguirá mudar a password e terminar sessão.</string>
    <string name="descricaoAjudaPerfilPass">Para alterar a <i>password</i> basta clicar no botão de mudar <i>password</i>, de seguida irá aparecer uma <i>pop-up</i>. Como é demonstrado na primeira imagem é preciso inserir a <i>password</i> atual, a nova e repetir. Ao alterar a irá aparecer uma mensagem de sucesso e uma <i>pop-up</i> com uma mensagem a dizer que a sessão irá ser terminada.</string>
    <string name="descricaoAjudaPerfilSessão">Para terminar sessão basta clicar no botão de terminar sessão, depois irá aparecer uma <i>pop-up</i> de confirmação e ao confirmar o utilizador termina sessão e é redirecionado para a página de início de sessão.</string>
    <string name="preencherSenha">Preencha a password!</string>
    <string name="preencherSenhaAtual">Preenche a tua password atual!</string>
    <string name="novaPassCurta">A nova password é muito curta!</string>
    <string name="passAtualizada">Password atualizada com sucesso</string>
    <string name="campoObrigatorio">Campo obrigatório</string>
    <string name="utilizadorSemRegisto">Utilizador não está registado.</string>
    <string name="naoCorrespondem">E-mail e senha não correspondem a um utilizador registado</string>
    <string name="erroAoEntrar">Erro ao tentar entrar: </string>
    <string name="passCurta">As passwords são curtas</string>
    <string name="passNaoCorresponde">As passwords não são iguais</string>
    <string name="passConfirmacaoVazia">Preencha a confirmação da password!</string>
    <string name="preencherNome">Preencha o nome</string>
    <string name="preencherEmail">Preencha o email</string>
    <string name="preencherhora">Hora não foi preenchida!</string>
    <string name="preencherSala">Sala não foi preenchida!</string>
    <string name="preencherDisciplina">Disciplina não foi preenchida!</string>
    <string name="digitarHora">Digite a hora corretamente</string>
    <string name="digitarSala">Digite a sala corretamente</string>
    <string name="digitarDisciplina">Digite a disciplina corretamente</string>
    <string name="linkCopiado">O link foi copiado!</string>
    <string name="preencherData">Preencha a data corretamente</string>
</resources>