<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ajuda.AjudaTarefaPrincipal"
    android:layout_margin="10dp"
    android:gravity="bottom"
    android:layout_gravity="bottom">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="top"
                android:layout_gravity="top">

                <TextView
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/descricaoAjudaTarefaPrincipal"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ajuda_tarefa_principal"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:fontFamily="@font/g_bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/tituloAjuda"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_marginRight="5dp">
                            <Button
                                android:id="@+id/btnAjudaCriarTarefa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/blue_background"
                                android:fontFamily="@font/g_bold"
                                android:text="@string/criarTarefa"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_marginLeft="5dp">
                            <Button
                                android:id="@+id/btnAjudaEditarTarefa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/blue_background"
                                android:fontFamily="@font/g_bold"
                                android:text="@string/editarTarefa"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_marginRight="5dp">
                            <Button
                                android:id="@+id/btnAjudaRealizarTarefa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/blue_background"
                                android:fontFamily="@font/g_bold"
                                android:text="@string/realizarTarefa"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:layout_marginBottom="5dp"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_marginLeft="5dp">

                            <Button
                                android:id="@+id/btnAjudaEliminarTarefa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/blue_background"
                                android:fontFamily="@font/g_bold"
                                android:text="@string/eliminarTarefa"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="18sp"/>

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </TableLayout>
    </ScrollView>

</LinearLayout>